# NUbots

./: .gitignore  Dockerfile  README.md  Vagrantfile  docker-compose.yml
.buildkite/: build_code.sh  install.sh  (+3 more)
module/vision/GoalDetector/: CMakeLists.txt
module/vision/GoalDetector/data/: CutoffTable.txt  CutoffTable1.xlsx  CutoffTable123.xlsx  CutoffTable2.xlsx  CutoffTable3.xlsx  PearsonsCorrTable.xlsx  goals.map  resultTable.txt
module/vision/GoalDetector/src/: AbsCoord.h  BackgroundImageGen.h  Cluster.cpp  Cluster.h  EigenDenseBaseAddons.h  FastHessian.cpp  FastHessian.h  GoalDetector.cpp  GoalDetector.h  GoalMatcher.cpp  GoalMatcher.h  GoalMatcherConstants.h  Integral.cpp  Integral.h  Ipoint.h  MapEntry.h  Point.h  RANSACLine.h  RRCoord.h  RRCoord.tcc  Ransac.cpp  Ransac.h  Responselayer.h  SurfDetection.cpp  SurfDetection.h  TestClass.cpp  TestClass.h  TestImageGen.h  Tfidf.cpp  Tfidf.h  Vocab.cpp  Vocab.h  boostSerializationEigenTypes.h
module/vision/VisualSLAM/: CMakeLists.txt
module/vision/VisualSLAM/src/: Converter.cc  Converter.h  Frame.cc  Frame.h  Initializer.cc  Initializer.h  KeyFrame.cc  KeyFrame.h  KeyFrameDatabase.cc  KeyFrameDatabase.h  LocalMapping.cc  LocalMapping.h  LoopClosing.cc  LoopClosing.h  Map.cc  Map.h  MapPoint.cc  MapPoint.h  ORBVocabulary.h  ORBextractor.cc  ORBextractor.h  ORBmatcher.cc  ORBmatcher.h  Optimizer.cc  Optimizer.h  PnPsolver.cc  PnPsolver.h  SVO.cpp  SVO.h  Sim3Solver.cc  Sim3Solver.h  SparseImageAlignment.cpp  SparseImageAlignment.h  System.cpp  System.h  Tracking.cc  Tracking.h  VisualSLAM.cpp  VisualSLAM.h
(+208 files in other folders)
