find_package(Boost REQUIRED)
FIND_PACKAGE(OpenCV2 REQUIRED)

# Build our NUClear module
NUCLEAR_MODULE(INCLUDES ${BOOST_INCLUDE_DIR} ${EIGEN_INCLUDE_DIR} ${OPENCV2_INCLUDE_DIR}
LIBRARIES ${Boost_SYSTEM_LIBRARY_RELEASE} ${Boost_REGEX_LIBRARY_RELEASE} ${Boost_THREAD_LIBRARY_RELEASE} ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE} ${Boost_SERIALIZATION_LIBRARY_RELEASE} ${Boost_PYTHON_LIBRARY_RELEASE} ${Eigen_DENSE_LIBRARY} ${OpenCV2_LIBRARIES})
