FIND_PACKAGE(OpenCV2 REQUIRED)
FIND_PACKAGE(DBoW2 REQUIRED)
FIND_PACKAGE(g2o REQUIRED)

# Build our NUClear module
NUCLEAR_MODULE(${EIGEN_INCLUDE_DIR} ${OPENCV2_INCLUDE_DIR} ${DBOW2_INCLUDE_DIR} ${g2o_INCLUDE_DIR}
LIBRARIES ${Eigen_DENSE_LIBRARY} ${OpenCV2_LIBRARIES} ${DBoW2_LIBRARIES} ${g2o_LIBRARIES})